css/schedule.css
/* ... */
/*  Display Style: Timeline  */
#kompassi_schedule[data-display="timeline"] {
	position: relative;
	color: var(--kompassi-fg);
	background-color: var(--kompassi-bg);
	overflow: hidden;
	box-shadow: var(--kompassi-box-shadow);
	border-radius: var(--kompassi-radius);

	.headers {
		position: absolute;
		top: 0;
		width: 100%;
		height: calc(var(--kompassi-schedule-timeline-row-height) * 2);
		background-color: var(--kompassi-bg);
	}
	.hint {
		position: absolute;
		padding: var(--kompassi-schedule-timeline-row-padding);
		background-color: var(--kompassi-bg);
		overflow: hidden;

		&.day-hint {
			width: 100%;
		}
		&.time-hint {
			top: var(--kompassi-schedule-timeline-row-height);
		}
	}

	&.sticky {
		z-index: 10;
		box-shadow: var(--kompassi-box-shadow);

		&.hint.time-hint {
			border-left: 1px solid var(--kompassi-fg-10);
			border-top: 1px solid var(--kompassi-fg-10);
		}
	}

	.ruler {
		width: auto;
		height: 100%;
		border-top: 1px solid var(--kompassi-fg-10);
		border-left: 1px solid var(--kompassi-fg-10);
		padding: 3px;
		color: var(--kompassi-schedule-fg-50);
		position: absolute;
		top: 0;
		bottom: 0;

		&:first-of-type {
			border-left-color: transparent;
		}
	}

	:is(.group-name, article) {
		padding: var(--kompassi-schedule-timeline-row-padding);
		position: absolute;
	}

	.group-name {
		display: block;
		color: var(--kompassi-fg);
		background-color: var(--kompassi-palette-4);
		border-radius: var(--kompassi-radius);
		position: absolute;
		left: 3px;
		right: 3px;
		z-index: 3;
		margin: 0;
	}

	article {
		position: relative;
		order: 1 !important;
		display: inline-block;
		background-color: var(--kompassi-program-color,var(--kompassi-program-color-default));
		background-image: linear-gradient(to bottom,rgba(0, 0, 0, 25%),rgba(0, 0, 0, 15%));
		color: #fff;

		z-index: 5;
		white-space: nowrap;
		overflow: hidden;

		section {
			display: none;
		}

		summary :is(.favorite, .secondary) {
			display: none;
		}

		&.is-favorite {
			.title {
				position: relative;
				padding-left: calc( 1em + 8px );

				&::after {
					position: absolute;
					display: inline-block;
					content: '';
					left: 4px;
					top: 2px;
					bottom: 2px;
					width: 1em;
					background-size: contain;
					background-position: 50% 50%;
					background-repeat: no-repeat;
				}
			}
		}

		&:hover {
			margin-top: -2px;
			box-shadow: 0 0 1em rgba(0, 0, 0, 20%);
			text-shadow: 0.05em 0.05em 0.1em rgba(0, 0, 0, 80%);
			filter: brightness(1.25);
			min-width: min-content !important;
			z-index: 2000;
		}

		.title {
			display: block;
		}

		&.continues {
			.title::before {
				content: '';
				display: block;
				float: left;
				width: var(--kompassi-line-height);
				height: var(--kompassi-line-height);
				margin-left: calc(-1 * var(--kompassi-schedule-timeline-row-padding));
				margin-right: var(--kompassi-schedule-timeline-row-padding);
				background: transparent url("../images/icons/arrow_left.svg");
				background-size: contain;
				background-repeat: no-repeat;
				filter: invert();
			}

			&.is-favorite {
				.title::before {
					margin-left: calc(-1 * ( var(--kompassi-schedule-timeline-row-padding) * 2 ) - (1em + 4px));
					margin-right: calc(var(--kompassi-schedule-timeline-row-padding) + (1em + 4px));
				}

				.title::after {
					left: calc(4px + 1em);
				}
			}
		}
	}
}
/* ... */

